--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
 a {
   color: rgb(244, 237, 250);
   font-family: Georgia, 'Times New Roman', Times, serif;
+  text-decoration: underline;
 }
 
 a:visited {
@@ -49,7 +50,6 @@ a:visited {
 
 a:hover {
   color: rgb(215, 180, 255);
-  ;
   font-weight: bold;
   cursor: pointer;
 }
@@ -58,6 +58,10 @@ p {
   color: rgb(244, 237, 250);
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
+}
+
+ul {
+  list-style-position: inside;
 }
 
 .accent {
@@ -76,15 +80,18 @@ p {
 
 .enter-btn {
   font-size: 3em;
-  color: rgb(232, 216, 250);
+  text-decoration: unset;
+  font-style: italic;
+  color: rgb(244, 237, 250);
   z-index: 9001;
   background-color: rgba(100, 100, 100, 60%);
   border-radius: 0.1em;
-  padding: 0.1em;
+  padding: 0.3em;
+  margin: 1em;
 }
 
 .enter-btn:hover {
-  color: rgb(215, 180, 255);
+  color: rgba(215, 180, 255, 0.6);
   box-shadow: 0px 0px 0.3em 0.15em rgba(215, 180, 255, 0.4);
 }
 
@@ -136,10 +143,34 @@ p {
   border: 0.5em;
   height: auto;
   width: auto;
+  min-width: 50vw;
   padding: 3%;
-  background-color: rgba(40, 44, 52, 95%);
+  background-color: rgba(40, 44, 52, 85%);
   outline: 0.15em solid white;
   outline-offset: -0.75em;
+}
+
+.invitation-body {
+  padding: 5%;
+}
+
+.menu-link {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin: 0px;
+  font-size: 0.75em;
+}
+
+.menu-items {
+  max-height: 60vh;
+  overflow-y: scroll;
+  padding: 1em;
+  display: block;
+  text-align: left;
+  color: rgb(244, 237, 250);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
 }
 
 .mute-btn {
