--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,10 @@ ul {
   }
 }
 
+.calendar-img:hover {
+  box-shadow: 0px 0px 0.3em 0.15em rgba(215, 180, 255, 0.4);
+}
+
 .invitation-frame {
   border: 0.5em;
   height: auto;
